# Conjure3D

./: .gitignore  CHAT_RESUME.md  HANDOFF.md  ISSUES.md  PROMPT.md  README.md  RESUMING.md  index.html  manual-blender-tests.md  package.json  pnpm-lock.yaml  vite.config.ts
docs/: FINAL_AUDIT.md  LAUNCH_AUDIT.md  pipeline.md  release-signing.md  security-hardening.md  v1.0.0-live-verify.md
scripts/: build-sidecar.ps1  gen-icon.py  package-addon.ps1  publish-release.ps1
sidecar/: addon.py  bambu.py  blender.py  blender_client.py  connection.py  edit_chain_schema.py  llm.py  llm_grammar.gbnf  llm_llama_cpp.py  llm_model_download.py  llm_openai.py  llm_openrouter.py  llm_prompts.py  main.py  mcp_token.py  meshy.py  meshy_mock.py  orchestrator.py  orchestrator_mock.py  project.py  pyproject.toml  recipe.py  settings.py  slicer.py  slugify.py  threemf_writer.py  tripo.py
sidecar/blender_addon/: blender_mcp.py
sidecar/ops/: __init__.py  bisect.py  color_split.py  decimate.py  export_3mf.py  export_glb.py  export_stl.py  fix_normals.py  import_glb.py  keep_largest.py  normalize.py  sanity.py  separate_loose.py  vase_top.py  voxel_remesh.py
sidecar/tests/: test_addon.py  test_bambu.py  test_blender.py  test_blender_client.py  test_connection.py  test_crash_logging.py  test_edit_chain_schema.py  test_llm_mock.py  test_llm_model_download.py  test_llm_openai.py  test_llm_openrouter.py  test_llm_provider_switch.py  test_llm_real.py  test_main.py  test_mcp_token.py  test_meshy.py  test_meshy_mock.py  test_ops_color_split.py  test_ops_decimate.py  test_ops_export_stl.py  test_ops_fix_normals.py  test_ops_normalize.py  test_ops_vase_top.py  test_ops_voxel_keep_largest.py  test_orchestrator.py  test_orchestrator_mock.py  test_project.py  test_recipe.py  test_settings.py  test_slicer.py  test_slugify.py  test_threemf_writer.py  test_tripo.py
sidecar/tests/fixtures/: sample_guitar.glb  sample_vase.glb  slugify_cases.json
src/: App.tsx  Home.tsx  Wizard.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sidecar.rs
src/WizardSteps/: Step1Blender.tsx  Step2Addon.tsx  Step3Socket.tsx  Step4Bambu.tsx  Step5Meshy.tsx
src/components/: AboutDialog.tsx  ConnectionBadge.tsx  ModelDownloadChip.tsx  SanityPanel.tsx  ThreePreview.tsx  UpdateChip.tsx
src/lib/: about.test.ts  about.ts  backendStatus.ts  blenderConnection.test.ts  blenderConnection.ts  edits.ts  (+13 more)
(+7 files in other folders)
