[project]
name = "conjure3d-sidecar"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "keyring",
    # Phase J.1: edit-chain schema validation for LLM output. Used by
    # edit_chain_schema.py to validate the JSON the LLM emits before the
    # orchestrator runs the chain.
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "responses",
]
